# samnya-aqua-exporter

./: .prettierrc.cjs  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.postcss  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/aimedb/: .gitignore  mod.rs
