[package]
name = "samnya-aqua-exporter"
version = "0.0.0"
description = "Samnya Aqua Exporter"
authors = ["Asakura Mizu <asakuramizu111@gmail.com>"]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "path-all", "dialog-save", "http-all", "http-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.8.3"
ecb = { version = "0.1.2", features = ["std"] }
tokio = { version = "1.34.0", features = ["net"] }
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["deflate"] }
anyhow = "1.0.75"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
